--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,7 +1,7 @@
 .foot{
     margin-top: 1rem;
     padding: 1rem;
-    background-color: rgb(24,24,24);
+    background-color: #181818;
     position: fixed;
     bottom: 0;
     left: 0;
