--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .back{
-  background-image: url('./Assets/Images/19449741.jpg');
+  /* background-image: url('./Assets/Images/19449741.jpg'); */
+  background-attachment: fixed;
+  background-repeat: repeat;
   width: 100%;
   height: 100vh;
   background-size: cover;
